--- a/src/main/webapp/resources/rest_detail/bootstrap/css/val2.css
+++ b/src/main/webapp/resources/rest_detail/bootstrap/css/val2.css
@@ -13,7 +13,7 @@
 
 .u-section-1 .u-image-2 {
   min-height: 252px;
-
+ 
 }
 
 
@@ -140,6 +140,7 @@
 }
 
 .u-section-1 .u-container-layout-7 {
+	padding-left: 10px;
 }
 
 @media (max-width: 1199px) {
