--- a/src/main/webapp/resources/css/mainPage.css
+++ b/src/main/webapp/resources/css/mainPage.css
@@ -6,8 +6,7 @@
 
 }
 
-#container .btn {
-	
+#container .btn {	
 	opacity: 60%;
 	background-color:white;
 	position: absolute;
@@ -26,13 +25,15 @@
 	color: black;
 	border: 1px solid #e7e7e7;
 	border-radius: 25px;
+	z-index:111;
 }
 
 #container .btn:hover {
-	background-color: #FFE7CF;
+	background-color:gray;
+	color:white;
 }
 #container .btn2 {
-	z-index:1;
+	z-index:11;
 	opacity: 60%;
 	background-color: white;
 	position: absolute;
@@ -54,6 +55,6 @@
 }
 
 #container .btn2:hover {
-	background-color: #FFE7CF;
+	background-color: gray;
+	color:white;
 }
-
